window switching logic fixes